# TradeDataAPI

./: .gitignore  README.org  pyproject.toml  requirements.txt
conf/: credentials_example.yml
tradedata/: utils.py
tradedata/initialise/: __init__.py  create_database.py  download_data.py
tradedata/update/: check_trade_records.py  monthly_update.py
